--- a/app/views/candies/index.html.erb
+++ b/app/views/candies/index.html.erb
@@ -14,7 +14,7 @@
     <% @candies.each do |candy| %>
       <tr>
         <td><%= candy.name %></td>
-        <td><%= candy.kids.map {|c| c.name}.join(', ')%></td>
+        <td><%#= candy.kids.map {|c| c.name}.join(', ')%></td>
         <td><%= link_to 'Show', candy %></td>
         <td><%= link_to 'Edit', edit_candy_path(candy) %></td>
         <td><%= link_to 'Destroy', candy, method: :delete, data: { confirm: 'Are you sure?' } %></td>
