--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -18,7 +18,13 @@
 
   <div class="field">
   Candies : 
-      <%= collection_check_boxes(:kid, :candy_ids, @candies, :id, :name) %>                            
+   <%= form.collection_check_boxes :candy_ids, Candy.all, :id, :name do |candy|%>
+        <label>
+          <%= candy.check_box %>
+          <%= candy.text%>
+        </label>
+        <!-- <br/> -->
+    <%end%>                            
   </div>
 
   <div class="actions">
